--- a/oliviawilliams-petinsurance-capstone/src/main/resources/templates/myaccount.html
+++ b/oliviawilliams-petinsurance-capstone/src/main/resources/templates/myaccount.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns:th = "https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
+>
 <head>
-    <title>Hello</title>
+    <title>My Account</title>
 </head>
-
 <body>
+<h2>Hello</h2>
 
-<h2 th:inline="text" >hello [[${#httpServletRequest.remoteUser}]]!</h2>
-
-<form th:action="@{/logout}" method="post">
-    <input type="submit" value="Sign-out">
-</form>
-
-
+<p>Click here <a  th:href="@{/myaccount}">for greeting</a> </p>
 </body>
 </html>
